modules/gdscript/tests/scripts/parser/errors/if_var_miss_initializer.gd
func test():
    if var x:
        pass
